fix vertical align input

--- a/src/Calculator.css
+++ b/src/Calculator.css
@@ -12,7 +12,7 @@
 .calculator input[type="text"] {
   border: none;
   font-size: 24px;
-  padding: 10px;
+  padding: 10px 10px 20px 10px;
   width: 100%;
   box-sizing: border-box;
   text-align: end;
